Updated to 1.12.4 and added Guns back in.